syntax = "proto3";


service LoginService {
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string name = 2;
    string password = 3;
}

message User {
    int32 id = 1;
    string name = 2;
    string password = 3;
    bool isOpenSesion = 4;
}

message LoginResponse {
    bool exitoso = 1;
    string mensaje = 2;
    User user = 3;
}



// Definicion para el servicio de registro

service RegisterService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string name = 1;
    string password = 2;
}

message RegisterResponse {
    bool exitoso = 1;
    string mensaje = 2;
}


// Definicion para el servicio de Log out

service LogOutService {
    rpc LogOut (LogOutRequest) returns (LogOutResponse);
}

message LogOutRequest {
    int32 id = 1;
}

message LogOutResponse {
    bool exitoso = 1;
    string mensaje = 2;
}


// Definicion para el servicio de guardar archivos

service SaveFilesService {
    rpc SaveFiles (SaveFilesRequest) returns (SaveFilesResponse);
}

message SaveFilesRequest {
    repeated string files = 1;
}

message SaveFilesResponse {
    bool exitoso = 1;
    string mensaje = 2;
}


// Definicion para el servicio de busqueda de puertos

service GetPortsService {
    rpc GetPorts (GetPortsRequest) returns (GetPortsResponse);
}

message GetPortsRequest {
    int32 id = 1;
}

message GetPortsResponse {
    bool exitoso = 1;
    string mensaje = 2;
    repeated string ports = 3;
}


// Definicion para el servicio de busqueda de archivos

service GetFilesService {
    rpc GetFiles (GetFilesRequest) returns (GetFilesResponse);
}

message GetFilesRequest {
    int32 id = 1;
}

message GetFilesResponse {
    string mensaje = 1;
    repeated string files = 2;
}